syntax = "proto3";

package product;

option go_package = "./internal/pb";

import "google/protobuf/Empty.proto";

service ProductService {
  rpc ListProduct(google.protobuf.Empty) returns (ListProductResponse);
  rpc GetProduct(GetProductIdRequest) returns (GetProductResponse);
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(GetProductIdRequest) returns (DeleteProductResponse);
}

message UserService {
  int64 id = 1;
  string name = 2;
  string email = 3;
}

message Product {
  int64 id = 1;
  string name = 2;
  string description = 3;
  int64 created_by = 4;
  UserService user = 5;
}

message ListProductResponse {
  repeated Product data = 1;
}

message GetProductResponse {
  Product data = 1;
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  int64 created_by = 3;
}

message CreateProductResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}

message UpdateProductRequest {
  int64 id = 1;
  string name = 2;
  string description = 3;
}

message UpdateProductResponse {
  int64 status = 1;
  string error = 2;
}

message GetProductIdRequest {
  int64 id = 1;
}

message GetProductIdResponse {
  int64 status = 1;
  string error = 2;
  Product data = 3;
}

message DeleteProductResponse {
  int64 status = 1;
  string error = 2;
}